<resources>
    <string name="app_name">DigiDash</string>
    <string name="title_Perf">Performance</string>
    <string name="title_Trip">Trip</string>
    <string name="title_Temps">Temperatures</string>
    <string name="title_Fuel">Consumption</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Digital Car Dashboard</string>
    <string name="nav_header_subtitle">smith-b9@ulster.ac.uk</string>
    <string name="imgSpeedometer">Speedometer</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="extras">Extras</string>
    <string name="txtRegister">Welcome. Please Register to Continue</string>
    <string name="hintEmail">Enter Email</string>
    <string name="btnRegister">Register</string>
    <string name="txtRegLogin">Already Registered? Login Here</string>
    <string name="hintPassword">Enter Password</string>
    <string name="txtLogin">Welcome. Please Login to Continue</string>
    <string name="btnLogin">Login</string>
    <string name="txtLoginReg">Don\'t have an account? Sign Up Here</string>
    <string name="txtNoNetwork">There is currently no network connection. Please turn on WiFi or Mobile Data and tap retry to try again.</string>
    <string name="signOut">Sign Out</string>
    <string name="txtLogging">Welcome to Trip Logging</string>
    <string name="btnLogging">Log Trip Data</string>
    <string name="txtOptions">Additional</string>
    <string name="btnRetrieveLog">Retrieve Logs</string>
    <string name="txtDeviceList">Please select the correct ODB device from the list</string>
    <string name="txtSelectDevice">Connect To Device</string>
    <string name="textSelectDevice">Please select your default OBD Device. If you haven\'t paired the device yet, please do so and run the app again.</string>
    <string name="btnRetry">Retry</string>
    <string name="bluetoothPref"> </string>
    <string name="txtFaultCodes">Fault Codes</string>
    <string name="txtSelectDeviceProtocol">Please Select your OBD device from the list</string>
    <string name="btnFindProtocol">Find Protocol</string>
    <string name="preference_file_key" />
    <string name="savedStarted" />
</resources>
