<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_Perf"
            android:icon="@drawable/ic_speed_24px"
            android:title="@string/title_Perf" />

        <item
            android:id="@+id/navigation_Trip"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/title_Trip" />

        <item
            android:id="@+id/navigation_Temps"
            android:icon="@drawable/ic_ac_unit_black_24dp"
            android:title="@string/title_Temps" />

        <item
            android:id="@+id/navigation_Fuel"
            android:icon="@drawable/ic_local_gas_station_black_24dp"
            android:title="@string/title_Fuel" />
    </group>
    <item android:title="@string/extras">
        <menu>
            <item
                android:id="@+id/navigation_Bluetooth"
                android:title="@string/title_bluetooth" />
            <item
                android:id="@+id/navigation_SignOut"
                android:title="@string/signOut"/>
        </menu>
    </item>
</menu>
