<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_Perf"
        android:icon="@drawable/ic_speed_24px"
        android:title="@string/title_Perf" />

    <item
        android:id="@+id/navigation_Trip"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/title_Trip" />

    <item
        android:id="@+id/navigation_Battery"
        android:icon="@drawable/ic_battery_80_black_24dp"
        android:title="@string/title_Battery" />

    <item
        android:id="@+id/navigation_Temps"
        android:icon="@drawable/ic_ac_unit_black_24dp"
        android:title="@string/title_Temps" />

    <item
        android:id="@+id/navigation_Fuel"
        android:icon="@drawable/ic_local_gas_station_black_24dp"
        android:title="@string/title_Fuel" />

</menu>
